// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`hero card > matches the expanded layout snapshot, with skills, artifacts and backpack 1`] = `
{
  "height": 846,
  "ops": [
    {
      "height": 186,
      "kind": "panel",
      "panel": "hero",
      "width": 194,
      "x": 0,
      "y": 0,
    },
    {
      "height": 64,
      "kind": "sprite",
      "src": "assets/heroes/large/196.png",
      "width": 58,
      "x": 10,
      "y": 12,
    },
    {
      "align": "left",
      "colour": "yellow",
      "font": "medium",
      "kind": "text",
      "maxLines": 1,
      "maxWidth": 110,
      "text": "Todd",
      "x": 73,
      "y": 12,
    },
    {
      "align": "center",
      "colour": "gold",
      "font": "small",
      "kind": "text",
      "text": "26",
      "x": 85,
      "y": 60,
    },
    {
      "align": "center",
      "colour": "gold",
      "font": "small",
      "kind": "text",
      "text": "25",
      "x": 113,
      "y": 60,
    },
    {
      "align": "center",
      "colour": "gold",
      "font": "small",
      "kind": "text",
      "text": "25",
      "x": 141,
      "y": 60,
    },
    {
      "align": "center",
      "colour": "gold",
      "font": "small",
      "kind": "text",
      "text": "26",
      "x": 169,
      "y": 60,
    },
    {
      "align": "center",
      "colour": "white",
      "font": "tiny",
      "kind": "text",
      "text": "27",
      "x": 167,
      "y": 102,
    },
    {
      "height": 32,
      "kind": "sprite",
      "src": "assets/creatures/13.png",
      "width": 32,
      "x": 45,
      "y": 85,
    },
    {
      "align": "center",
      "colour": "white",
      "font": "tiny",
      "kind": "text",
      "text": "3",
      "x": 61,
      "y": 119,
    },
    {
      "height": 32,
      "kind": "sprite",
      "src": "assets/creatures/110.png",
      "width": 32,
      "x": 81,
      "y": 85,
    },
    {
      "align": "center",
      "colour": "white",
      "font": "tiny",
      "kind": "text",
      "text": "15",
      "x": 97,
      "y": 119,
    },
    {
      "height": 32,
      "kind": "sprite",
      "src": "assets/creatures/116.png",
      "width": 32,
      "x": 117,
      "y": 85,
    },
    {
      "align": "center",
      "colour": "white",
      "font": "tiny",
      "kind": "text",
      "text": "8",
      "x": 133,
      "y": 119,
    },
    {
      "height": 32,
      "kind": "sprite",
      "src": "assets/creatures/118.png",
      "width": 32,
      "x": 27,
      "y": 133,
    },
    {
      "align": "center",
      "colour": "white",
      "font": "tiny",
      "kind": "text",
      "text": "4",
      "x": 43,
      "y": 167,
    },
    {
      "height": 32,
      "kind": "sprite",
      "src": "assets/creatures/120.png",
      "width": 32,
      "x": 63,
      "y": 133,
    },
    {
      "align": "center",
      "colour": "white",
      "font": "tiny",
      "kind": "text",
      "text": "2",
      "x": 79,
      "y": 167,
    },
    {
      "height": 32,
      "kind": "sprite",
      "src": "assets/creatures/127.png",
      "width": 32,
      "x": 99,
      "y": 133,
    },
    {
      "align": "center",
      "colour": "white",
      "font": "tiny",
      "kind": "text",
      "text": "1",
      "x": 115,
      "y": 167,
    },
    {
      "height": 32,
      "kind": "sprite",
      "src": "assets/creatures/131.png",
      "width": 32,
      "x": 135,
      "y": 133,
    },
    {
      "align": "center",
      "colour": "white",
      "font": "tiny",
      "kind": "text",
      "text": "1",
      "x": 151,
      "y": 167,
    },
    {
      "height": 660,
      "kind": "panel",
      "panel": "expansion",
      "width": 194,
      "x": 0,
      "y": 186,
    },
    {
      "align": "left",
      "colour": "white",
      "font": "small",
      "kind": "text",
      "maxWidth": 162,
      "text": "Level 22 Artificer",
      "x": 16,
      "y": 204,
    },
    {
      "align": "left",
      "colour": "white",
      "font": "small",
      "kind": "text",
      "maxWidth": 162,
      "text": "Movement 1500 / 1500",
      "x": 16,
      "y": 222,
    },
    {
      "align": "left",
      "colour": "white",
      "font": "small",
      "kind": "text",
      "maxWidth": 162,
      "text": "Mana 27 / 390",
      "x": 16,
      "y": 240,
    },
    {
      "align": "left",
      "colour": "white",
      "font": "small",
      "kind": "text",
      "maxWidth": 162,
      "text": "Experience 132486",
      "x": 16,
      "y": 258,
    },
    {
      "align": "left",
      "colour": "yellow",
      "font": "small",
      "kind": "text",
      "maxWidth": 162,
      "text": "Skills",
      "x": 16,
      "y": 280,
    },
    {
      "height": 32,
      "kind": "sprite",
      "src": "assets/skills/7_3.png",
      "width": 32,
      "x": 20,
      "y": 298,
    },
    {
      "height": 32,
      "kind": "sprite",
      "src": "assets/skills/19_2.png",
      "width": 32,
      "x": 60,
      "y": 298,
    },
    {
      "height": 32,
      "kind": "sprite",
      "src": "assets/skills/22_3.png",
      "width": 32,
      "x": 100,
      "y": 298,
    },
    {
      "height": 32,
      "kind": "sprite",
      "src": "assets/skills/23_3.png",
      "width": 32,
      "x": 140,
      "y": 298,
    },
    {
      "height": 32,
      "kind": "sprite",
      "src": "assets/skills/14_1.png",
      "width": 32,
      "x": 20,
      "y": 332,
    },
    {
      "height": 32,
      "kind": "sprite",
      "src": "assets/skills/25_2.png",
      "width": 32,
      "x": 60,
      "y": 332,
    },
    {
      "height": 32,
      "kind": "sprite",
      "src": "assets/skills/21_3.png",
      "width": 32,
      "x": 100,
      "y": 332,
    },
    {
      "height": 32,
      "kind": "sprite",
      "src": "assets/skills/2_2.png",
      "width": 32,
      "x": 140,
      "y": 332,
    },
    {
      "align": "left",
      "colour": "yellow",
      "font": "small",
      "kind": "text",
      "maxWidth": 162,
      "text": "Artifacts",
      "x": 16,
      "y": 370,
    },
    {
      "height": 44,
      "kind": "sprite",
      "src": "assets/artifacts/12.png",
      "width": 44,
      "x": 20,
      "y": 388,
    },
    {
      "height": 44,
      "kind": "sprite",
      "src": "assets/artifacts/4.png",
      "width": 44,
      "x": 72,
      "y": 388,
    },
    {
      "height": 44,
      "kind": "sprite",
      "src": "assets/artifacts/32.png",
      "width": 44,
      "x": 124,
      "y": 388,
    },
    {
      "height": 44,
      "kind": "sprite",
      "src": "assets/artifacts/7.png",
      "width": 44,
      "x": 20,
      "y": 434,
    },
    {
      "height": 44,
      "kind": "sprite",
      "src": "assets/artifacts/18.png",
      "width": 44,
      "x": 72,
      "y": 434,
    },
    {
      "height": 44,
      "kind": "sprite",
      "src": "assets/artifacts/23.png",
      "width": 44,
      "x": 124,
      "y": 434,
    },
    {
      "height": 44,
      "kind": "sprite",
      "src": "assets/artifacts/120.png",
      "width": 44,
      "x": 20,
      "y": 480,
    },
    {
      "height": 44,
      "kind": "sprite",
      "src": "assets/artifacts/121.png",
      "width": 44,
      "x": 72,
      "y": 480,
    },
    {
      "height": 44,
      "kind": "sprite",
      "src": "assets/artifacts/26.png",
      "width": 44,
      "x": 124,
      "y": 480,
    },
    {
      "height": 44,
      "kind": "sprite",
      "src": "assets/artifacts/9.png",
      "width": 44,
      "x": 20,
      "y": 526,
    },
    {
      "height": 44,
      "kind": "sprite",
      "src": "assets/artifacts/10.png",
      "width": 44,
      "x": 72,
      "y": 526,
    },
    {
      "height": 44,
      "kind": "sprite",
      "src": "assets/artifacts/44.png",
      "width": 44,
      "x": 124,
      "y": 526,
    },
    {
      "height": 44,
      "kind": "sprite",
      "src": "assets/artifacts/143.png",
      "width": 44,
      "x": 20,
      "y": 572,
    },
    {
      "align": "left",
      "colour": "yellow",
      "font": "small",
      "kind": "text",
      "maxWidth": 162,
      "text": "Backpack (37)",
      "x": 16,
      "y": 622,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/artifacts/5.png",
      "width": 24,
      "x": 17,
      "y": 640,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/artifacts/7.png",
      "width": 24,
      "x": 43,
      "y": 640,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/artifacts/122.png",
      "width": 24,
      "x": 69,
      "y": 640,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/artifacts/31.png",
      "width": 24,
      "x": 95,
      "y": 640,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/artifacts/33.png",
      "width": 24,
      "x": 121,
      "y": 640,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/artifacts/60.png",
      "width": 24,
      "x": 147,
      "y": 640,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/artifacts/61.png",
      "width": 24,
      "x": 17,
      "y": 666,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/artifacts/62.png",
      "width": 24,
      "x": 43,
      "y": 666,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/artifacts/63.png",
      "width": 24,
      "x": 69,
      "y": 666,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/artifacts/64.png",
      "width": 24,
      "x": 95,
      "y": 666,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/artifacts/88.png",
      "width": 24,
      "x": 121,
      "y": 666,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/artifacts/90.png",
      "width": 24,
      "x": 147,
      "y": 666,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/artifacts/91.png",
      "width": 24,
      "x": 17,
      "y": 692,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/artifacts/92.png",
      "width": 24,
      "x": 43,
      "y": 692,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/artifacts/93.png",
      "width": 24,
      "x": 69,
      "y": 692,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/artifacts/110.png",
      "width": 24,
      "x": 95,
      "y": 692,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/artifacts/111.png",
      "width": 24,
      "x": 121,
      "y": 692,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/artifacts/112.png",
      "width": 24,
      "x": 147,
      "y": 692,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/artifacts/113.png",
      "width": 24,
      "x": 17,
      "y": 718,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/artifacts/114.png",
      "width": 24,
      "x": 43,
      "y": 718,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/artifacts/115.png",
      "width": 24,
      "x": 69,
      "y": 718,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/artifacts/116.png",
      "width": 24,
      "x": 95,
      "y": 718,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/artifacts/117.png",
      "width": 24,
      "x": 121,
      "y": 718,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/artifacts/118.png",
      "width": 24,
      "x": 147,
      "y": 718,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/artifacts/119.png",
      "width": 24,
      "x": 17,
      "y": 744,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/artifacts/125.png",
      "width": 24,
      "x": 43,
      "y": 744,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/artifacts/126.png",
      "width": 24,
      "x": 69,
      "y": 744,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/artifacts/127.png",
      "width": 24,
      "x": 95,
      "y": 744,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/artifacts/128.png",
      "width": 24,
      "x": 121,
      "y": 744,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/artifacts/129.png",
      "width": 24,
      "x": 147,
      "y": 744,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/artifacts/130.png",
      "width": 24,
      "x": 17,
      "y": 770,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/artifacts/131.png",
      "width": 24,
      "x": 43,
      "y": 770,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/artifacts/132.png",
      "width": 24,
      "x": 69,
      "y": 770,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/artifacts/133.png",
      "width": 24,
      "x": 95,
      "y": 770,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/artifacts/140.png",
      "width": 24,
      "x": 121,
      "y": 770,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/artifacts/141.png",
      "width": 24,
      "x": 147,
      "y": 770,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/artifacts/142.png",
      "width": 24,
      "x": 17,
      "y": 796,
    },
  ],
  "width": 194,
}
`;

exports[`hero card > matches the layout snapshot 1`] = `
{
  "height": 186,
  "ops": [
    {
      "height": 186,
      "kind": "panel",
      "panel": "hero",
      "width": 194,
      "x": 0,
      "y": 0,
    },
    {
      "height": 64,
      "kind": "sprite",
      "src": "assets/heroes/large/196.png",
      "width": 58,
      "x": 10,
      "y": 12,
    },
    {
      "align": "left",
      "colour": "yellow",
      "font": "medium",
      "kind": "text",
      "maxLines": 1,
      "maxWidth": 110,
      "text": "Todd",
      "x": 73,
      "y": 12,
    },
    {
      "align": "center",
      "colour": "gold",
      "font": "small",
      "kind": "text",
      "text": "26",
      "x": 85,
      "y": 60,
    },
    {
      "align": "center",
      "colour": "gold",
      "font": "small",
      "kind": "text",
      "text": "25",
      "x": 113,
      "y": 60,
    },
    {
      "align": "center",
      "colour": "gold",
      "font": "small",
      "kind": "text",
      "text": "25",
      "x": 141,
      "y": 60,
    },
    {
      "align": "center",
      "colour": "gold",
      "font": "small",
      "kind": "text",
      "text": "26",
      "x": 169,
      "y": 60,
    },
    {
      "align": "center",
      "colour": "white",
      "font": "tiny",
      "kind": "text",
      "text": "27",
      "x": 167,
      "y": 102,
    },
    {
      "height": 32,
      "kind": "sprite",
      "src": "assets/creatures/13.png",
      "width": 32,
      "x": 45,
      "y": 85,
    },
    {
      "align": "center",
      "colour": "white",
      "font": "tiny",
      "kind": "text",
      "text": "3",
      "x": 61,
      "y": 119,
    },
    {
      "height": 32,
      "kind": "sprite",
      "src": "assets/creatures/110.png",
      "width": 32,
      "x": 81,
      "y": 85,
    },
    {
      "align": "center",
      "colour": "white",
      "font": "tiny",
      "kind": "text",
      "text": "15",
      "x": 97,
      "y": 119,
    },
    {
      "height": 32,
      "kind": "sprite",
      "src": "assets/creatures/116.png",
      "width": 32,
      "x": 117,
      "y": 85,
    },
    {
      "align": "center",
      "colour": "white",
      "font": "tiny",
      "kind": "text",
      "text": "8",
      "x": 133,
      "y": 119,
    },
    {
      "height": 32,
      "kind": "sprite",
      "src": "assets/creatures/118.png",
      "width": 32,
      "x": 27,
      "y": 133,
    },
    {
      "align": "center",
      "colour": "white",
      "font": "tiny",
      "kind": "text",
      "text": "4",
      "x": 43,
      "y": 167,
    },
    {
      "height": 32,
      "kind": "sprite",
      "src": "assets/creatures/120.png",
      "width": 32,
      "x": 63,
      "y": 133,
    },
    {
      "align": "center",
      "colour": "white",
      "font": "tiny",
      "kind": "text",
      "text": "2",
      "x": 79,
      "y": 167,
    },
    {
      "height": 32,
      "kind": "sprite",
      "src": "assets/creatures/127.png",
      "width": 32,
      "x": 99,
      "y": 133,
    },
    {
      "align": "center",
      "colour": "white",
      "font": "tiny",
      "kind": "text",
      "text": "1",
      "x": 115,
      "y": 167,
    },
    {
      "height": 32,
      "kind": "sprite",
      "src": "assets/creatures/131.png",
      "width": 32,
      "x": 135,
      "y": 133,
    },
    {
      "align": "center",
      "colour": "white",
      "font": "tiny",
      "kind": "text",
      "text": "1",
      "x": 151,
      "y": 167,
    },
  ],
  "width": 194,
}
`;

exports[`town card > matches the expanded layout snapshot, with the mage guild and the open research 1`] = `
{
  "height": 698,
  "ops": [
    {
      "height": 186,
      "kind": "panel",
      "panel": "town",
      "width": 194,
      "x": 0,
      "y": 0,
    },
    {
      "height": 64,
      "kind": "sprite",
      "src": "assets/towns/20.png",
      "width": 58,
      "x": 10,
      "y": 12,
    },
    {
      "align": "left",
      "colour": "yellow",
      "font": "medium",
      "kind": "text",
      "maxLines": 1,
      "maxWidth": 110,
      "text": "New Dolere",
      "x": 73,
      "y": 12,
    },
    {
      "height": 34,
      "kind": "sprite",
      "src": "assets/ui/hall-3.png",
      "width": 34,
      "x": 74,
      "y": 43,
    },
    {
      "height": 32,
      "kind": "sprite",
      "src": "assets/creatures/13.png",
      "width": 32,
      "x": 45,
      "y": 85,
    },
    {
      "align": "center",
      "colour": "white",
      "font": "tiny",
      "kind": "text",
      "text": "12",
      "x": 61,
      "y": 119,
    },
    {
      "height": 32,
      "kind": "sprite",
      "src": "assets/creatures/110.png",
      "width": 32,
      "x": 81,
      "y": 85,
    },
    {
      "align": "center",
      "colour": "white",
      "font": "tiny",
      "kind": "text",
      "text": "6",
      "x": 97,
      "y": 119,
    },
    {
      "height": 34,
      "kind": "sprite",
      "src": "assets/ui/fort-2.png",
      "width": 34,
      "x": 112,
      "y": 43,
    },
    {
      "height": 512,
      "kind": "panel",
      "panel": "expansion",
      "width": 194,
      "x": 0,
      "y": 186,
    },
    {
      "align": "left",
      "colour": "white",
      "font": "small",
      "kind": "text",
      "maxWidth": 162,
      "text": "Factory · Capitol · Castle",
      "x": 16,
      "y": 204,
    },
    {
      "align": "left",
      "colour": "yellow",
      "font": "small",
      "kind": "text",
      "maxWidth": 162,
      "text": "Mage Guild level 5",
      "x": 16,
      "y": 226,
    },
    {
      "align": "left",
      "colour": "white",
      "font": "small",
      "kind": "text",
      "maxWidth": 162,
      "text": "Level 1",
      "x": 16,
      "y": 244,
    },
    {
      "height": 36,
      "kind": "sprite",
      "src": "assets/spells/15.png",
      "width": 48,
      "x": 18,
      "y": 262,
    },
    {
      "height": 36,
      "kind": "sprite",
      "src": "assets/spells/27.png",
      "width": 48,
      "x": 70,
      "y": 262,
    },
    {
      "height": 36,
      "kind": "sprite",
      "src": "assets/spells/41.png",
      "width": 48,
      "x": 122,
      "y": 262,
    },
    {
      "height": 36,
      "kind": "sprite",
      "src": "assets/spells/53.png",
      "width": 48,
      "x": 18,
      "y": 302,
    },
    {
      "height": 36,
      "kind": "sprite",
      "src": "assets/spells/2.png",
      "width": 48,
      "x": 70,
      "y": 302,
    },
    {
      "align": "left",
      "colour": "white",
      "font": "small",
      "kind": "text",
      "maxWidth": 162,
      "text": "Level 2",
      "x": 16,
      "y": 344,
    },
    {
      "height": 36,
      "kind": "sprite",
      "src": "assets/spells/16.png",
      "width": 48,
      "x": 18,
      "y": 362,
    },
    {
      "height": 36,
      "kind": "sprite",
      "src": "assets/spells/43.png",
      "width": 48,
      "x": 70,
      "y": 362,
    },
    {
      "height": 36,
      "kind": "sprite",
      "src": "assets/spells/46.png",
      "width": 48,
      "x": 122,
      "y": 362,
    },
    {
      "height": 36,
      "kind": "sprite",
      "src": "assets/spells/49.png",
      "width": 48,
      "x": 18,
      "y": 402,
    },
    {
      "align": "left",
      "colour": "white",
      "font": "small",
      "kind": "text",
      "maxWidth": 162,
      "text": "Level 3",
      "x": 16,
      "y": 444,
    },
    {
      "height": 36,
      "kind": "sprite",
      "src": "assets/spells/17.png",
      "width": 48,
      "x": 18,
      "y": 462,
    },
    {
      "height": 36,
      "kind": "sprite",
      "src": "assets/spells/38.png",
      "width": 48,
      "x": 70,
      "y": 462,
    },
    {
      "height": 36,
      "kind": "sprite",
      "src": "assets/spells/55.png",
      "width": 48,
      "x": 122,
      "y": 462,
    },
    {
      "align": "left",
      "colour": "white",
      "font": "small",
      "kind": "text",
      "maxWidth": 162,
      "text": "Level 4",
      "x": 16,
      "y": 504,
    },
    {
      "height": 36,
      "kind": "sprite",
      "src": "assets/spells/9.png",
      "width": 48,
      "x": 18,
      "y": 522,
    },
    {
      "height": 36,
      "kind": "sprite",
      "src": "assets/spells/21.png",
      "width": 48,
      "x": 70,
      "y": 522,
    },
    {
      "colour": "rgba(0, 0, 0, 0.55)",
      "height": 36,
      "kind": "fill",
      "width": 48,
      "x": 70,
      "y": 522,
    },
    {
      "align": "center",
      "colour": "yellow",
      "font": "tiny",
      "kind": "text",
      "text": "?2",
      "x": 94,
      "y": 535,
    },
    {
      "align": "left",
      "colour": "white",
      "font": "small",
      "kind": "text",
      "maxWidth": 162,
      "text": "Level 5",
      "x": 16,
      "y": 564,
    },
    {
      "height": 36,
      "kind": "sprite",
      "src": "assets/spells/26.png",
      "width": 48,
      "x": 18,
      "y": 582,
    },
    {
      "align": "left",
      "colour": "white",
      "font": "small",
      "kind": "text",
      "maxWidth": 162,
      "text": "Research open, 2 roll(s): Fireball",
      "x": 16,
      "y": 624,
    },
    {
      "align": "left",
      "colour": "white",
      "font": "small",
      "kind": "text",
      "maxWidth": 162,
      "text": "Visiting: Kyrre",
      "x": 16,
      "y": 642,
    },
    {
      "align": "left",
      "colour": "grey",
      "font": "small",
      "kind": "text",
      "maxWidth": 162,
      "text": "Click again for the hero",
      "x": 16,
      "y": 660,
    },
  ],
  "width": 194,
}
`;

exports[`town card > matches the layout snapshot 1`] = `
{
  "height": 186,
  "ops": [
    {
      "height": 186,
      "kind": "panel",
      "panel": "town",
      "width": 194,
      "x": 0,
      "y": 0,
    },
    {
      "height": 64,
      "kind": "sprite",
      "src": "assets/towns/20.png",
      "width": 58,
      "x": 10,
      "y": 12,
    },
    {
      "align": "left",
      "colour": "yellow",
      "font": "medium",
      "kind": "text",
      "maxLines": 1,
      "maxWidth": 110,
      "text": "New Dolere",
      "x": 73,
      "y": 12,
    },
    {
      "height": 34,
      "kind": "sprite",
      "src": "assets/ui/hall-3.png",
      "width": 34,
      "x": 74,
      "y": 43,
    },
    {
      "height": 32,
      "kind": "sprite",
      "src": "assets/creatures/13.png",
      "width": 32,
      "x": 45,
      "y": 85,
    },
    {
      "align": "center",
      "colour": "white",
      "font": "tiny",
      "kind": "text",
      "text": "12",
      "x": 61,
      "y": 119,
    },
    {
      "height": 32,
      "kind": "sprite",
      "src": "assets/creatures/110.png",
      "width": 32,
      "x": 81,
      "y": 85,
    },
    {
      "align": "center",
      "colour": "white",
      "font": "tiny",
      "kind": "text",
      "text": "6",
      "x": 97,
      "y": 119,
    },
    {
      "height": 34,
      "kind": "sprite",
      "src": "assets/ui/fort-2.png",
      "width": 34,
      "x": 112,
      "y": 43,
    },
  ],
  "width": 194,
}
`;
